--- a/bot.ipynb
+++ b/bot.ipynb
@@ -748,8 +748,8 @@
     "# https://medium.com/@ManHay_Hong/how-to-create-a-telegram-bot-and-send-messages-with-python-4cf314d9fa3e\n",
     "def telegram_bot_sendtext(bot_message):\n",
     "    \n",
-    "    bot_token = '5062338559:AAGKbMgOxfoL4h7Xbub5QqctNKJh25EvBZA'\n",
-    "    bot_chatID = '1826283117'\n",
+    "    bot_token = 'xxxxxxxx',
+    "    bot_chatID = 'xxxxxx",
     "    send_text = 'https://api.telegram.org/bot' + bot_token + '/sendMessage?chat_id=' + bot_chatID + '&parse_mode=Markdown&text=' + bot_message\n",
     "\n",
     "    response = requests.get(send_text)\n",
